deleted vite files, start  design

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -1,13 +1,44 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/css/reset.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <title>Orient Express</title>
+
+</head>
+
+<body>
+  <header>
+    <nav>
+      <img src="" alt="">
+      <img src="" alt="">
+    </nav>
+  </header>
+  <main>
+    <section class="hero">
+      <dotlottie-player class="hero_lottie" src="https://lottie.host/165f806b-6813-498a-93ed-18f5cfb33126/jmZKkjkkHN.json"
+        background="transparent" speed="1"  autoplay></dotlottie-player>
+      <p>All the way from Paris to Cairo in just 6 days!<br> I was terrified but extremely excited as well.</p>
+      <button class="hero_button" href="#">departure</button>
+    </section>
+    <section>
+
+    </section>
+   
+  </main>
+
+  <footer>
+
+  </footer>
+  <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
+  <script type="module" src="/main.js"></script>
+</body>
+
 </html>
