--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -17,20 +17,86 @@
 <body>
   <header>
     <nav>
-      <img src="" alt="">
-      <img src="" alt="">
+      <img src="./assets/logo_one.svg" alt="">
+      <img src="./assets/logo_two.svg" alt="">
     </nav>
   </header>
   <main>
-    <section class="hero">
-      <dotlottie-player class="hero_lottie" src="https://lottie.host/165f806b-6813-498a-93ed-18f5cfb33126/jmZKkjkkHN.json"
-        background="transparent" speed="1"  autoplay></dotlottie-player>
-      <p>All the way from Paris to Cairo in just 6 days!<br> I was terrified but extremely excited as well.</p>
-      <button class="hero_button" href="#">departure</button>
+    <section>
+      <div class="hero">
+        <dotlottie-player class="hero_lottie" src="https://lottie.host/165f806b-6813-498a-93ed-18f5cfb33126/jmZKkjkkHN.json"
+          background="transparent" speed="1" autoplay></dotlottie-player>
+        <p>All the way from Paris to Cairo in just 6 days! I was terrified but extremely excited as well.</p>
+        <a class="hero_button" href="#">departure</a>
+      </div>
+      <div class="intro">
+          <img src="./assets/intro_phone.png" alt="">
+          <p>I remember that I could hardly believe my eyes. There we were, on the platform of the <span class="blue_text">Gare de Lyon</span> in Paris.</p>
+      </div>
+      <div class="louise">
+        <div class="louise_1"></div>
+        <div class="louise_2">
+          <p>I was then just a <span class="gold_text">young Parisian</span>, the governess to a rich business man's family, who
+          had to go to Cairo for a while. And I was allowed to go too!</p>
+        </div>
+        <div class="louise_3"></div>
+        <div class="louise_4">
+          <p>It was <span class="gold_text">nine o'clock</span> in the evening and the train was due to leave half an hour later.
+          </p>
+        </div>
+      </div>
+      <div class="convo">
+        <img class="year" src="./assets/year.svg" alt="">
+        <div>
+          <p>the Simplon Orient Express was at the top of it's fame.<br><br>
+          Behind me I overheard two gentlemen talking enthusiastically about:</p>
+        </div>
+      </div>
     </section>
     <section>
-
+      <div class="chapter chapter__one" >
+        <p>on y va!</p>
+      </div>
+      <div class="departure">
+        <img src="./assets/departure_train.png" alt="">
+        <img src="./assets/departure_group_one.png" alt="">
+        <img src="./assets/departure_group_two.png" alt="">
+        <img src="./assets/departure_group_three.png" alt="">
+      </div>
+      <div class="train_info">
+        <div>
+          <p>
+            It was busy on the platform, but that was quite alright. Even the most imaginative among you would not believe what was going on there. Such a varied range of people!
+          </p>
+        </div>
+      </div>
+      <div class="people_info">
+        <div>
+          <p>
+            There were <span class="gold_text">diplomats</span> and <span class="gold_text">state leaders</span>, <span class="gold_text">stars</span> and <span class="gold_text">aristocrats</span>, <span class="gold_text">artists</span> and <span class="gold_text">writers</span>, even <span class="gold_text">traders</span> from the East and
+            Indian Maharajas on their way home.
+          </p>
+        </div>
+      </div>
     </section>
+    <section>
+      <div class=" chapter chapter__two">
+        <p>a meal fit for a queen</p>
+      </div>
+      <div class="items">
+        <div class="items items__one">
+          <p>The first night went by. I slept extremely well. We got ready and went to the dining car for an extensive breakfast.
+          Once again the luxury was a feast for the eyes.</p>
+        </div>
+        <div class="items items__two">
+        </div>
+        <div class="items items__three">
+          <p>Colourful carpets, white table linen, champagne buckets, crystal glasses and carafes, silver cutlery and bone china
+          plates.</p>
+        </div>
+      </div>
+    </section>
+    
    
   </main>
 
