--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Italianno&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/style.css">
   <title>Orient Express</title>
@@ -34,13 +34,14 @@
           <p>I remember that I could hardly believe my eyes. There we were, on the platform of the <span class="blue_text">Gare de Lyon</span> in Paris.</p>
       </div>
       <div class="louise">
-        <div class="louise_1"></div>
-        <div class="louise_2">
+          <img class="louise_one" src="./assets/louise_phone.png" alt="">
+        <div class="louise_two">
           <p>I was then just a <span class="gold_text">young Parisian</span>, the governess to a rich business man's family, who
           had to go to Cairo for a while. And I was allowed to go too!</p>
         </div>
-        <div class="louise_3"></div>
-        <div class="louise_4">
+        <img class="louise_three" src="./assets/train_logo.png" alt="">
+        <div class="louise_four">
+          <img src="./assets/train_clock.png" alt="">
           <p>It was <span class="gold_text">nine o'clock</span> in the evening and the train was due to leave half an hour later.
           </p>
         </div>
@@ -70,6 +71,25 @@
           </p>
         </div>
       </div>
+      <div class="groups">
+        <div class="people people__one">
+          <p>artists<br>
+          &<br>
+          writers</p>
+          <img src="./assets/person_one.png" alt="">
+        </div>
+        <div class="people people__two">
+          <img src="./assets/person_two.png" alt="">
+          <p>diplomats<br>
+          &<br>
+          state leaders</p>
+        </div>
+        <div class="people people__three">
+          <p>traders from<br>
+          East and Indian<br> Maharajas</p>
+          <img src="./assets/person_three.png" alt="">
+        </div>
+      </div>
       <div class="people_info">
         <div>
           <p>
@@ -84,13 +104,19 @@
         <p>a meal fit for a queen</p>
       </div>
       <div class="items">
-        <div class="items items__one">
-          <p>The first night went by. I slept extremely well. We got ready and went to the dining car for an extensive breakfast.
-          Once again the luxury was a feast for the eyes.</p>
+        <div class="item_present">
+          <div class="items__one">
+            <p>The first night went by. I slept extremely well. We got ready and went to the dining car for an extensive
+              breakfast.
+              Once again the luxury was a feast for the eyes.</p>
+          </div>
+          <div class="items__two">
+            <img src="./assets/item__one.png" alt="">
+            <img src="./assets/item__two.png" alt="">
+            <img src="./assets/item__three.png" alt="">
+          </div>
         </div>
-        <div class="items items__two">
-        </div>
-        <div class="items items__three">
+        <div class="items__three">
           <p>Colourful carpets, white table linen, champagne buckets, crystal glasses and carafes, silver cutlery and bone china
           plates.</p>
         </div>
