--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -48,10 +48,18 @@
       </div>
       <div class="convo">
         <img class="year" src="./assets/year.svg" alt="">
-        <div>
+        <div class="convo--intro">
           <p>the Simplon Orient Express was at the top of it's fame.<br><br>
           Behind me I overheard two gentlemen talking enthusiastically about:</p>
         </div>
+        <div class="convo--exchange">
+          <li class="text--blue"><p>Excited about the upcoming adventure on the Orient Express?</p></li>
+          <li class="text--red"><p>Absolutely, it has a fascinating history of luxury travel.</p></li>
+          <li class="text--blue"><p>Dating back to the late 19th century, those compartments hold countless stories.</p></li>
+          <li class="text--red"><p>From royalty to spies, the Orient Express is a rolling time capsule.</p></li>
+          <li class="text--blue"><p>Stepping into that bygone era will be an unforgettable experience.</p></li>
+        </div>
+        <img class="talkers" src="./assets/talkers.png" alt="">
       </div>
     </section>
     <section>
