--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -34,13 +34,15 @@
           <p>I remember that I could hardly believe my eyes. There we were, on the platform of the <span class="blue_text">Gare de Lyon</span> in Paris.</p>
       </div>
       <div class="louise">
-          <img class="louise_one" src="./assets/louise_phone.png" alt="">
-        <div class="louise_two">
+        <img class="louise__one" src="./assets/louise_phone.png" alt="">
+        <div class="louise__two">
           <p>I was then just a <span class="gold_text">young Parisian</span>, the governess to a rich business man's family, who
           had to go to Cairo for a while. And I was allowed to go too!</p>
         </div>
-        <img class="louise_three" src="./assets/train_logo.png" alt="">
-        <div class="louise_four">
+        <div class="louise__three">
+          <img src="./assets/louise4.png" alt="">
+        </div>
+        <div class="louise__four">
           <img src="./assets/train_clock.png" alt="">
           <p>It was <span class="gold_text">nine o'clock</span> in the evening and the train was due to leave half an hour later.
           </p>
@@ -129,6 +131,34 @@
           plates.</p>
         </div>
       </div>
+      <div class="dishes--info">
+        <p>We had a real chef on board. In the evening he served an excellent menu:</p>
+        <div class="dishes--menu">
+          <li class="dish dish_one">
+            <p>consommé Xavier</p>
+            <img src="./assets/dish_one_na.png" alt="">
+          </li>
+          <li class="dish dish_two">
+            <p>saumon en Bellevue</p>
+            <img src="./assets/dish_two_na.png" alt="">
+          </li>
+          <li class="dish dish_three">
+            <p>saumon en Bellevue</p>
+            <img src="./assets/dish_two_na.png" alt="">
+          </li>
+          <li class="dish dish_four">
+            <p>saumon en Bellevue</p>
+            <img src="./assets/dish_two_na.png" alt="">
+          </li>
+          <li class="dish dish_five">
+            <p>saumon en Bellevue</p>
+            <img src="./assets/dish_two_na.png" alt="">
+          </li>
+          <li class="dish dish_six">
+
+          </li>
+        </div>
+      </div>
     </section>
     
    
@@ -137,6 +167,8 @@
   <footer>
 
   </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
   <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
   <script type="module" src="/main.js"></script>
 </body>
