design changes before changing project location

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -26,7 +26,6 @@
       <div class="hero">
         <dotlottie-player class="hero_lottie" src="https://lottie.host/165f806b-6813-498a-93ed-18f5cfb33126/jmZKkjkkHN.json"
           background="transparent" speed="1" autoplay></dotlottie-player>
-        <p>All the way from Paris to Cairo in just 6 days! I was terrified but extremely excited as well.</p>
         <a class="hero_button" href="#">departure</a>
       </div>
       <div class="intro">
@@ -55,11 +54,11 @@
           Behind me I overheard two gentlemen talking enthusiastically about:</p>
         </div>
         <div class="convo--exchange">
-          <li class="text--blue"><p>Excited about the upcoming adventure on the Orient Express?</p></li>
-          <li class="text--red"><p>Absolutely, it has a fascinating history of luxury travel.</p></li>
-          <li class="text--blue"><p>Dating back to the late 19th century, those compartments hold countless stories.</p></li>
-          <li class="text--red"><p>From royalty to spies, the Orient Express is a rolling time capsule.</p></li>
-          <li class="text--blue"><p>Stepping into that bygone era will be an unforgettable experience.</p></li>
+          <li class=" text text--blue"><p>Excited about the upcoming adventure on the Orient Express?</p></li>
+          <li class=" text text--red"><p>Absolutely, it has a fascinating history of luxury travel.</p></li>
+          <li class=" text text--blue"><p>Dating back to the late 19th century, those compartments hold countless stories.</p></li>
+          <li class=" text text--red"><p>From royalty to spies, the Orient Express is a rolling time capsule.</p></li>
+          <li class=" text text--blue"><p>Stepping into that bygone era will be an unforgettable experience.</p></li>
         </div>
         <img class="talkers" src="./assets/talkers.png" alt="">
       </div>
@@ -69,10 +68,10 @@
         <p>on y va!</p>
       </div>
       <div class="departure">
-        <img src="./assets/departure_train.png" alt="">
-        <img src="./assets/departure_group_one.png" alt="">
-        <img src="./assets/departure_group_two.png" alt="">
-        <img src="./assets/departure_group_three.png" alt="">
+        <img class="departure--group departure--group__train" src="./assets/departure_train.png" alt="">
+        <img class="departure--group departure--group__one" src="./assets/departure_group_one.png" alt="">
+        <img class="departure--group departure--group__two" src="./assets/departure_group_two.png" alt="">
+        <img class="departure--group departure--group__three" src="./assets/departure_group_three.png" alt="">
       </div>
       <div class="train_info">
         <div>
