--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
   <header>
     <nav>
       <img src="./assets/logo_one.svg" alt="">
-      <img src="./assets/logo_two.svg" alt="">
+      <img src="./assets/hamburger.svg" class="hamburger"></img>
     </nav>
+    <div class="links">
+      <a href="#chapter--one">chapter 1<br><span class="chapter_title">Intro</span></a>
+      <a href="#chapter--two">chapter 2<br><span class="chapter_title">On y va!</span></a>
+      <a href="#chapter--three">chapter 3<br><span class="chapter_title">A meal fit for a queen.</span></a>
+      <a href="#chapter--four">chapter 4<br><span class="chapter_title">A bridge between East and West.</span></a>
+    </div>
   </header>
   <main>
     <section>
@@ -39,7 +45,15 @@
           had to go to Cairo for a while. And I was allowed to go too!</p>
         </div>
         <div class="louise__three">
-          <img src="./assets/louise4.png" alt="">
+          <img class="text__detail" src="./assets/detail_one.svg" alt="">
+          <h2>Select the right Orient Express emblem.</h2>
+          <div>
+            <img class="louise__three--image louise__three--image--wrong" src="./assets/train_logo.png" alt="">
+            <img class="louise__three--image louise__three--image--right" src="./assets/train_logo.png" alt="">
+            <img class="louise__three--image louise__three--image--wrong" src="./assets/train_logo.png" alt="">
+          </div>
+          <p class="emblem__feedback">Maybe it's your lucky day!</p>
+          <img class="text__detail" src="./assets/detail_one.svg" alt="">
         </div>
         <div class="louise__four">
           <img src="./assets/train_clock.png" alt="">
@@ -49,17 +63,19 @@
       </div>
       <div class="convo">
         <img class="year" src="./assets/year.svg" alt="">
-        <div class="convo--intro">
+        <div class="convo__intro">
           <p>the Simplon Orient Express was at the top of it's fame.<br><br>
           Behind me I overheard two gentlemen talking enthusiastically about:</p>
         </div>
-        <div class="convo--exchange">
-          <li class=" text text--blue"><p>Excited about the upcoming adventure on the Orient Express?</p></li>
-          <li class=" text text--red"><p>Absolutely, it has a fascinating history of luxury travel.</p></li>
-          <li class=" text text--blue"><p>Dating back to the late 19th century, those compartments hold countless stories.</p></li>
-          <li class=" text text--red"><p>From royalty to spies, the Orient Express is a rolling time capsule.</p></li>
-          <li class=" text text--blue"><p>Stepping into that bygone era will be an unforgettable experience.</p></li>
+        <img class="convo__detail" src="./assets/detail_two.svg" alt="">
+        <div class="convo__exchange">
+          <li class=" text text__blue"><p>Excited about the upcoming adventure on the Orient Express?</p></li>
+          <li class=" text text__red"><p>Absolutely, it has a fascinating history of luxury travel.</p></li>
+          <li class=" text text__blue"><p>Dating back to the late 19th century, those compartments hold countless stories.</p></li>
+          <li class=" text text__red"><p>From royalty to spies, the Orient Express is a rolling time capsule.</p></li>
+          <li class=" text text__blue"><p>Stepping into that bygone era will be an unforgettable experience.</p></li>
         </div>
+        <img class="convo__detail" src="./assets/detail_two.svg" alt="">
         <img class="talkers" src="./assets/talkers.png" alt="">
       </div>
     </section>
