added dishes and fixed people cards

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           had to go to Cairo for a while. And I was allowed to go too!</p>
         </div>
         <div class="louise__three">
-          <img class="text__detail" src="./assets/detail_one.svg" alt="">
-          <h2>Select the right Orient Express emblem.</h2>
+          <img class="text__detail text__detail--louise" src="./assets/detail_one.svg" alt="">
+          <h3>Test your knowledge. Do you know the emblem of the Orient Express?</h3>
           <div>
             <img class="louise__three--image louise__three--image--wrong" src="./assets/train_logo.png" alt="">
             <img class="louise__three--image louise__three--image--right" src="./assets/train_logo.png" alt="">
@@ -81,7 +81,7 @@
     </section>
     <section>
       <div class="chapter chapter__one" >
-        <p>on y va!</p>
+        <h2>on y va!</h2>
       </div>
       <div class="departure">
         <img class="departure--group departure--group__train" src="./assets/departure_train.png" alt="">
@@ -90,31 +90,64 @@
         <img class="departure--group departure--group__three" src="./assets/departure_group_three.png" alt="">
       </div>
       <div class="train_info">
-        <div>
+        <div class="train_info--intro">
           <p>
             It was busy on the platform, but that was quite alright. Even the most imaginative among you would not believe what was going on there. Such a varied range of people!
           </p>
         </div>
-      </div>
-      <div class="groups">
-        <div class="people people__one">
-          <p>artists<br>
-          &<br>
-          writers</p>
-          <img src="./assets/person_one.png" alt="">
+        <div class="cards-container">
+          <img class="text__detail" src="./assets/detail_three.svg" alt="">
+          <h3>Do you think they were on the Orient Express?</h3>
+          <div class="card card__one ">
+            <p class="card__title">artists</p>
+            <img src="./assets/person_one.png" alt="">
+            <div>
+              <p class="awnser awnser__one awnser__one__correct">Yes</p>
+              <p class="awnser awnser__one awnser__one__incorrect">No</p>
+            </div>
+
+          </div>
+
+          <div class="card card__two hide">
+            <p class="card__title">artists</p>
+            <img src="./assets/person_one.png" alt="">
+            <div>
+              <p class="awnser awnser__two awnser__two__correct">Yes</p>
+              <p class="awnser awnser__two awnser__two__incorrect">No</p>
+            </div>
+
+          </div>
+
+          <div class="card card__three hide">
+            <p class="card__title">state leaders</p>
+            <img src="./assets/person_two.png" alt="">
+            <div>
+              <p class="awnser awnser__three awnser__three__correct">Yes</p>
+              <p class="awnser awnser__three awnser__three__incorrect">No</p>
+            </div>
+
+          </div>
+
+          <div class="card card__four hide">
+            <p class="card__title">traders</p>
+            <img src="./assets/person_three.png" alt="">
+            <div>
+              <p class="awnser awnser__four awnser__four__correct">Yes</p>
+              <p class="awnser awnser__four awnser__four__incorrect">No</p>
+            </div>
+
+          </div>
+
+          <div class="card card__five hide">
+            <p class="card__title">artists</p>
+            <img src="./assets/person_one.png" alt="">
+            <div>
+              <p class="awnser awnser__five awnser__five__correct">Yes</p>
+              <p class="awnser awnser__five awnser__five__incorrect">No</p>
+            </div>
+          </div>
+          <img class="text__detail" src="./assets/detail_three.svg" alt="">
         </div>
-        <div class="people people__two">
-          <img src="./assets/person_two.png" alt="">
-          <p>diplomats<br>
-          &<br>
-          state leaders</p>
-        </div>
-        <div class="people people__three">
-          <p>traders from<br>
-          East and Indian<br> Maharajas</p>
-          <img src="./assets/person_three.png" alt="">
-        </div>
-      </div>
       <div class="people_info">
         <div>
           <p>
@@ -126,14 +159,14 @@
     </section>
     <section>
       <div class=" chapter chapter__two">
-        <p>a meal fit for a queen</p>
+        <h2>a meal fit for a queen</h2>
       </div>
       <div class="items">
         <div class="item_present">
           <div class="items__one">
             <p>The first night went by. I slept extremely well. We got ready and went to the dining car for an extensive
               breakfast.
-              Once again the luxury was a feast for the eyes.</p>
+              <span class="gold_text">Once again the luxury was a feast for the eyes.</span></p>
           </div>
           <div class="items__two">
             <img src="./assets/item__one.png" alt="">
@@ -142,6 +175,7 @@
           </div>
         </div>
         <div class="items__three">
+          <img class="text__detail" src="./assets/detail_one.svg" alt="">
           <p>Colourful carpets, white table linen, champagne buckets, crystal glasses and carafes, silver cutlery and bone china
           plates.</p>
         </div>
