changed image naming and fixed logo interactivity

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
           <img class="text__detail text__detail--louise" src="./assets/detail_one.svg" alt="">
           <h3>Test your knowledge. Do you know the emblem of the Orient Express?</h3>
           <div>
-            <img class="louise__three--image louise__three--image--wrong" src="./assets/train_logo.png" alt="">
-            <img class="louise__three--image louise__three--image--right" src="./assets/train_logo.png" alt="">
-            <img class="louise__three--image louise__three--image--wrong" src="./assets/train_logo.png" alt="">
+            <img class="louise__three--image louise__three--image--wrong_one" src="./assets/logo_one_na.png" alt="">
+            <img class="louise__three--image louise__three--image--right" src="./assets/logo_two_na.png" alt="">
+            <img class="louise__three--image louise__three--image--wrong_two" src="./assets/logo_three_na.png" alt="">
           </div>
           <p class="emblem__feedback">Maybe it's your lucky day!</p>
           <img class="text__detail" src="./assets/detail_one.svg" alt="">
@@ -76,7 +76,10 @@
           <li class=" text text__blue"><p>Stepping into that bygone era will be an unforgettable experience.</p></li>
         </div>
         <img class="convo__detail" src="./assets/detail_two.svg" alt="">
-        <img class="talkers" src="./assets/talkers.png" alt="">
+        <div class="convo__talkers">
+          <img src="./assets/talker_one.png" alt="">
+          <img src="./assets/talker_two.png" alt="">
+        </div>
       </div>
     </section>
     <section>
@@ -204,9 +207,37 @@
             <img src="./assets/dish_two_na.png" alt="">
           </li>
           <li class="dish dish_six">
-
+            <p>saumon en Bellevue</p>
+            <img src="./assets/dish_two_na.png" alt="">
           </li>
         </div>
+      </div>
+      <div class="documents">
+        <div class="documents__intro">
+          <img class="documents__intro--image_one" src="./assets/side_decoration.svg" alt="">
+          <p>The journey from Paris to Istanbul lasted just 3 days. That was made possible by the fact that the train kept going day
+          and night.</p>
+          <img class="documents__intro--image_two" src="./assets/side_decoration.svg" alt="">
+        </div>
+        <div class="documents__text_one">
+        <img class="text__detail text__detail--documents" src="./assets/detail_three.svg" alt="">
+        <p>I had expected it to be a tiring experience but after the first night I was pleasantly surprised at the ease and comfort
+        of the trip.</p>
+        </div>
+        <div class="documents__find">
+          <p>The train attendant collected all documents when we set off.<br><br>Can you find the right document?</p>
+          <div class="documents__find--options">
+            <img src="./assets/document_one.png" alt="">
+            <img src="./assets/document_one.png" alt="">
+            <img src="./assets/document_one.png" alt="">
+          </div>
+        </div>
+        <div class="documents__text_two">
+          <p>That meant they didn't need to wake us when we passed through customs at a border.</p>
+          <img class="text__detail text__detail--documents" src="./assets/detail_three.svg" alt="">
+        </div>
+
+
       </div>
     </section>
     
