--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
         <a class="hero_button" href="#">departure</a>
       </div>
       <div class="intro">
-          <img src="./assets/intro_phone.png" alt="">
           <p>I remember that I could hardly believe my eyes. There we were, on the platform of the <span class="blue_text">Gare de Lyon</span> in Paris.</p>
       </div>
       <div class="louise">
-        <img class="louise__one" src="./assets/louise_phone.png" alt="">
+        <img class="louise__one" src="./assets/illustration_louise.png" alt="">
         <div class="louise__two">
           <p>I was then just a <span class="gold_text">young Parisian</span>, the governess to a rich business man's family, who
           had to go to Cairo for a while. And I was allowed to go too!</p>
@@ -56,15 +55,16 @@
           <img class="text__detail" src="./assets/detail_one.svg" alt="">
         </div>
         <div class="louise__four">
-          <img src="./assets/train_clock.png" alt="">
+          <img src="./assets/illustration_clock.png" alt="">
           <p>It was <span class="gold_text">nine o'clock</span> in the evening and the train was due to leave half an hour later.
           </p>
         </div>
       </div>
       <div class="convo">
-        <img class="year" src="./assets/year.svg" alt="">
+        <img class="decor" src="./assets/decor.svg" alt="">
+        <img class="year" src="./assets/illustration_year.png" alt="">
         <div class="convo__intro">
-          <p>the Simplon Orient Express was at the top of it's fame.<br><br>
+          <p>That year the Simplon Orient Express was at the top of it's fame.<br><br>
           Behind me I overheard two gentlemen talking enthusiastically about:</p>
         </div>
         <img class="convo__detail" src="./assets/detail_two.svg" alt="">
@@ -78,7 +78,7 @@
         <img class="convo__detail" src="./assets/detail_two.svg" alt="">
         <div class="convo__talkers">
           <img src="./assets/talker_one.png" alt="">
-          <img src="./assets/talker_two.png" alt="">
+          <img src="./assets/illustration_personTwo.png" alt="">
         </div>
       </div>
     </section>
