--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           <p>That year the Simplon Orient Express was at the top of it's fame.<br><br>
           Behind me I overheard two gentlemen talking enthusiastically about:</p>
         </div>
+        <img  class="convo__talker" src="./assets/illustration_personOne.png" alt="">
         <img class="convo__detail" src="./assets/detail_two.svg" alt="">
         <div class="convo__exchange">
           <li class=" text text__blue"><p>Excited about the upcoming adventure on the Orient Express?</p></li>
@@ -76,9 +77,7 @@
           <li class=" text text__blue"><p>Stepping into that bygone era will be an unforgettable experience.</p></li>
         </div>
         <img class="convo__detail" src="./assets/detail_two.svg" alt="">
-        <div class="convo__talkers">
-          <img src="./assets/talker_one.png" alt="">
-          <img src="./assets/illustration_personTwo.png" alt="">
+        <img class="convo__talker" src="./assets/illustration_personTwo.png" alt="">
         </div>
       </div>
     </section>
