--- a/index.html
+++ b/index.html
@@ -100,54 +100,52 @@
         <div class="cards-container">
           <img class="text__detail" src="./assets/detail_three.svg" alt="">
           <h3>Do you think they were on the Orient Express?</h3>
+
           <div class="card card__one ">
             <p class="card__title">artists</p>
             <img src="./assets/person_one.png" alt="">
-            <div>
-              <p class="awnser awnser__one awnser__one__correct">Yes</p>
-              <p class="awnser awnser__one awnser__one__incorrect">No</p>
+            <div class="awnser__one">
+              <p class="awnser  awnser__correct">Yes</p>
+              <p class="awnser  awnser__incorrect">No</p>
             </div>
-
           </div>
 
           <div class="card card__two hide">
-            <p class="card__title">artists</p>
+            <p class="card__title">clowns</p>
             <img src="./assets/person_one.png" alt="">
-            <div>
-              <p class="awnser awnser__two awnser__two__correct">Yes</p>
-              <p class="awnser awnser__two awnser__two__incorrect">No</p>
+            <div class="awnser__two">
+              <p class="awnser awnser__incorrect">Yes</p>
+              <p class="awnser awnser__correct">No</p>
             </div>
-
           </div>
 
           <div class="card card__three hide">
             <p class="card__title">state leaders</p>
             <img src="./assets/person_two.png" alt="">
-            <div>
-              <p class="awnser awnser__three awnser__three__correct">Yes</p>
-              <p class="awnser awnser__three awnser__three__incorrect">No</p>
+            <div class="awnser__three">
+              <p class="awnser  awnser__correct">Yes</p>
+              <p class="awnser  awnser__incorrect">No</p>
             </div>
-
           </div>
 
           <div class="card card__four hide">
             <p class="card__title">traders</p>
             <img src="./assets/person_three.png" alt="">
-            <div>
-              <p class="awnser awnser__four awnser__four__correct">Yes</p>
-              <p class="awnser awnser__four awnser__four__incorrect">No</p>
+            <div class="awnser__four">
+              <p class="awnser awnser__correct">Yes</p>
+              <p class="awnser awnser__incorrect">No</p>
             </div>
-
           </div>
 
           <div class="card card__five hide">
-            <p class="card__title">artists</p>
+            <p class="card__title">shoe cleaners</p>
             <img src="./assets/person_one.png" alt="">
-            <div>
-              <p class="awnser awnser__five awnser__five__correct">Yes</p>
-              <p class="awnser awnser__five awnser__five__incorrect">No</p>
+            <div class="awnser__five">
+              <p class="awnser awnser__incorrect">Yes</p>
+              <p class="awnser awnser__correct">No</p>
             </div>
           </div>
+          <p class="result hide"></p>
           <img class="text__detail" src="./assets/detail_three.svg" alt="">
         </div>
       <div class="people_info">
@@ -186,28 +184,35 @@
         <p>We had a real chef on board. In the evening he served an excellent menu:</p>
         <div class="dishes--menu">
           <li class="dish dish_one">
-            <p>consommé Xavier</p>
+            <p class="dish__title">consommé Xavier</p>
             <img src="./assets/dish_one_na.png" alt="">
+            <p>A clear soup served with garnishes, showcasing rich flavors and meticulous preparation.</p>
           </li>
           <li class="dish dish_two">
-            <p>saumon en Bellevue</p>
+            <p class="dish__title">saumon en Bellevue</p>
             <img src="./assets/dish_two_na.png" alt="">
+            <p>Salmon presented in the Bellevue style, featuring a chilled presentation that highlights the delicate taste of the fish.</p>
           </li>
           <li class="dish dish_three">
-            <p>saumon en Bellevue</p>
+            <p class="dish__title">Cuissot de veau Ecarlate</p>
             <img src="./assets/dish_two_na.png" alt="">
+            <p>Slow-cooked veal shank, 'Ecarlate' style, offering tender meat with a flavorful and aromatic profile.</p>
           </li>
           <li class="dish dish_four">
-            <p>saumon en Bellevue</p>
+            <p class="dish__title">Asperges à l'italienne</p>
             <img src="./assets/dish_two_na.png" alt="">
+            <p>Asparagus prepared in the Italian style, providing a delicious twist to this classic vegetable dish.</p>
           </li>
           <li class="dish dish_five">
-            <p>saumon en Bellevue</p>
+            <p class="dish__title">Soufflé 'Alaska'</p>
             <img src="./assets/dish_two_na.png" alt="">
+            <p>A delectable dessert, the Alaska soufflé, combining light and airy textures with a touch of sweetness.</p>
           </li>
           <li class="dish dish_six">
-            <p>saumon en Bellevue</p>
+            <p class="dish__title">Corbeille de fruits</p>
             <img src="./assets/dish_two_na.png" alt="">
+            <p>A refreshing fruit basket, showcasing a variety of fresh and seasonal fruits for a delightful and healthy conclusion to
+            the meal.</p>
           </li>
         </div>
       </div>
